@@ -1,2 +1,1 @@
-DIST audacious-3.4.3.tar.bz2 485267 SHA256 183454f4df1482e569d16d1452b3e14010daeab2fbf9dfdd82cf741a72e39f12 SHA512 2513d657578bc198428d5a039d533711dc010406e8b06d024b27ff07eea51b407397bddc2165f7329066b4606079a70c53461ef83acf5c3c46e50cf7e3b35d0f WHIRLPOOL c5ad490b4e3791323bda2e49f81fcff013673bf6ced05b7eb47942b4384c48540973c82772766d7571a5f2a9a249395d56d08f5a1d6845d6d4516b552d279e5b
-DIST audacious-3.5-beta1.tar.bz2 439912 SHA256 ef202b59603f2cadc66810a81f84b79199cf1210b7cbb78933ee47d5e4700d24 SHA512 18ff9fb365a4b4f53652b046d6dfa07ffe206fd7167196264af9da99dceb9e09c2600089295f60e4429ef473d9f7e8e400138f3f8c6d64210aa251af232e7c47 WHIRLPOOL 21c6810e71b2647e5ac5785db7240a92c7c778b45aa8c6058e9672e9dc551b8a857ae565465c0bf9c44b17effaf8466f1fa503c9d38ed62d8eb83a292d568588
+DIST audacious-3.5.tar.bz2 443556 SHA256 4180a1a922b42ef2b1fe47c708a226e03e7400b35e04ece4b2e73c01c5d42514 SHA512 1956bd60b996aff9a137f65fd92cae1abc2c18e9ae2c9b0df959d0e1b15bce9eddb0ef090274fb833fef756537e87eff46d6aa45f110123fd0f2b673ecc6fe59 WHIRLPOOL 1e35acd9a2d1bb27b33c3281c7188f3686fa670860969e867bac177507d9e1a81f69c643a202d491de36301d458c3084aa11bab30086b854def4e7975826e502
