@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-sound/audacious/ChangeLog,v 1.296 2014/01/28 14:09:59 ago Exp $
 
+*audacious-3.5 (24 Apr 2014)
+
+  24 Apr 2014; Poncho <poncho@spahan.ch> +audacious-3.5.ebuild,
+  -audacious-3.4.3.ebuild, -audacious-3.5_beta1.ebuild:
+  media-sound/audacious: version bump
+
   28 Jan 2014; Agostino Sarubbo <ago@gentoo.org> audacious-3.4.1.ebuild:
   Stable for alpha, wrt bug #490463
 
